include/transcribe.h


typedef enum {
    TRANSCRIBE_OK                         = 0,
    TRANSCRIBE_ERR_INVALID_ARG            = 1,
    TRANSCRIBE_ERR_NOT_IMPLEMENTED        = 2,
    TRANSCRIBE_ERR_FILE_NOT_FOUND         = 3,
    TRANSCRIBE_ERR_GGUF                   = 4,
    TRANSCRIBE_ERR_UNSUPPORTED_ARCH       = 5,
    TRANSCRIBE_ERR_UNSUPPORTED_VARIANT    = 6,
    TRANSCRIBE_ERR_OOM                    = 7,
    TRANSCRIBE_ERR_BACKEND                = 8,
    TRANSCRIBE_ERR_SAMPLE_RATE            = 9,
    TRANSCRIBE_ERR_UNSUPPORTED_LANGUAGE   = 10,
    TRANSCRIBE_ERR_UNSUPPORTED_TASK       = 11,
    TRANSCRIBE_ERR_UNSUPPORTED_TIMESTAMPS = 12,
    TRANSCRIBE_ERR_ABORTED                = 13,
    TRANSCRIBE_ERR_BAD_STRUCT_SIZE        = 14,
    TRANSCRIBE_ERR_UNSUPPORTED_PNC        = 15,
    TRANSCRIBE_ERR_UNSUPPORTED_ITN        = 16,
    TRANSCRIBE_ERR_INPUT_TOO_LONG         = 17,
    TRANSCRIBE_ERR_OUTPUT_TRUNCATED       = 18,
} transcribe_status;
typedef enum {
    TRANSCRIBE_TIMESTAMPS_NONE    = 0,
    TRANSCRIBE_TIMESTAMPS_AUTO    = 1,
    TRANSCRIBE_TIMESTAMPS_SEGMENT = 2,
    TRANSCRIBE_TIMESTAMPS_WORD    = 3,
    TRANSCRIBE_TIMESTAMPS_TOKEN   = 4,
} transcribe_timestamp_kind;
struct transcribe_session;
struct transcribe_ext {
    uint64_t size;
    uint32_t kind;
};
struct transcribe_timings {
    uint64_t struct_size;
    float    load_ms;
    float    mel_ms;
    float    encode_ms;
    float    decode_ms;
};
TRANSCRIBE_API void transcribe_timings_init(struct transcribe_timings * out);
TRANSCRIBE_API transcribe_status transcribe_get_timings(const struct transcribe_session * session,
                                                        struct transcribe_timings *       out_timings);
TRANSCRIBE_API void transcribe_print_timings(const struct transcribe_session * session);
TRANSCRIBE_API void transcribe_reset_timings(struct transcribe_session * session);
TRANSCRIBE_API const char *              transcribe_full_text(const struct transcribe_session * session);
TRANSCRIBE_API transcribe_timestamp_kind transcribe_returned_timestamp_kind(const struct transcribe_session * session);
TRANSCRIBE_API int                       transcribe_n_segments(const struct transcribe_session * session);
TRANSCRIBE_API int                       transcribe_n_words(const struct transcribe_session * session);
TRANSCRIBE_API int                       transcribe_n_tokens(const struct transcribe_session * session);
TRANSCRIBE_API const char * transcribe_detected_language(const struct transcribe_session * session);
struct transcribe_segment {
    uint64_t     struct_size;
    int64_t      t0_ms;
    int64_t      t1_ms;
    int          first_word;
    int          n_words;
    int          first_token;
    int          n_tokens;
    const char * text; 
};
TRANSCRIBE_API void transcribe_segment_init(struct transcribe_segment * out);
struct transcribe_word {
    uint64_t     struct_size;
    int64_t      t0_ms;
    int64_t      t1_ms;
    int          seg_index;
    int          first_token;
    int          n_tokens;
    const char * text; 
};
TRANSCRIBE_API void transcribe_word_init(struct transcribe_word * out);
struct transcribe_token {
    uint64_t     struct_size;
    int          id;
    float        p;
    int64_t      t0_ms;
    int64_t      t1_ms;
    int          seg_index;
    int          word_index;
    const char * text; 
};
TRANSCRIBE_API void transcribe_token_init(struct transcribe_token * out);
TRANSCRIBE_API transcribe_status transcribe_get_segment(const struct transcribe_session * session,
                                                        int                               i,
                                                        struct transcribe_segment *       out);
TRANSCRIBE_API transcribe_status transcribe_get_word(const struct transcribe_session * session,
                                                     int                               i,
                                                     struct transcribe_word *          out);
TRANSCRIBE_API transcribe_status transcribe_get_token(const struct transcribe_session * session,
                                                      int                               i,
                                                      struct transcribe_token *         out);
TRANSCRIBE_API int transcribe_batch_n_results(const struct transcribe_session * session);
TRANSCRIBE_API transcribe_status transcribe_batch_status(const struct transcribe_session * session, int i);
TRANSCRIBE_API const char * transcribe_batch_full_text(const struct transcribe_session * session, int i);
TRANSCRIBE_API transcribe_timestamp_kind
transcribe_batch_returned_timestamp_kind(const struct transcribe_session * session, int i);
TRANSCRIBE_API const char * transcribe_batch_detected_language(const struct transcribe_session * session, int i);
TRANSCRIBE_API int transcribe_batch_n_segments(const struct transcribe_session * session, int i);
TRANSCRIBE_API int transcribe_batch_n_words(const struct transcribe_session * session, int i);
TRANSCRIBE_API int transcribe_batch_n_tokens(const struct transcribe_session * session, int i);
TRANSCRIBE_API transcribe_status transcribe_batch_get_segment(const struct transcribe_session * session,
                                                              int                               i,
                                                              int                               j,
                                                              struct transcribe_segment *       out);
TRANSCRIBE_API transcribe_status transcribe_batch_get_word(const struct transcribe_session * session,
                                                           int                               i,
                                                           int                               j,
                                                           struct transcribe_word *          out);
TRANSCRIBE_API transcribe_status transcribe_batch_get_token(const struct transcribe_session * session,
                                                            int                               i,
                                                            int                               j,
                                                            struct transcribe_token *         out);
TRANSCRIBE_API transcribe_status transcribe_batch_get_timings(const struct transcribe_session * session,
                                                              int                               i,
                                                              struct transcribe_timings *       out);