bindings/rust/sys/src/transcribe_sys.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_timings"][::std::mem::size_of::<transcribe_timings>() - 24usize];
    ["Alignment of transcribe_timings"][::std::mem::align_of::<transcribe_timings>() - 8usize];
    ["Offset of field: transcribe_timings::struct_size"]
        [::std::mem::offset_of!(transcribe_timings, struct_size) - 0usize];
    ["Offset of field: transcribe_timings::load_ms"]
        [::std::mem::offset_of!(transcribe_timings, load_ms) - 8usize];
    ["Offset of field: transcribe_timings::mel_ms"]
        [::std::mem::offset_of!(transcribe_timings, mel_ms) - 12usize];
    ["Offset of field: transcribe_timings::encode_ms"]
        [::std::mem::offset_of!(transcribe_timings, encode_ms) - 16usize];
    ["Offset of field: transcribe_timings::decode_ms"]
        [::std::mem::offset_of!(transcribe_timings, decode_ms) - 20usize];
};
unsafe extern "C" {
    pub fn transcribe_timings_init(out: *mut transcribe_timings);
}
unsafe extern "C" {
    pub fn transcribe_get_timings(
        session: *const transcribe_session,
        out_timings: *mut transcribe_timings,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_print_timings(session: *const transcribe_session);
}
unsafe extern "C" {
    pub fn transcribe_reset_timings(session: *mut transcribe_session);
}
unsafe extern "C" {
    pub fn transcribe_full_text(
        session: *const transcribe_session,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn transcribe_returned_timestamp_kind(
        session: *const transcribe_session,
    ) -> transcribe_timestamp_kind;
}
unsafe extern "C" {
    pub fn transcribe_n_segments(session: *const transcribe_session) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_n_words(session: *const transcribe_session) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_n_tokens(session: *const transcribe_session) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_detected_language(
        session: *const transcribe_session,
    ) -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_segment {
    pub struct_size: u64,
    pub t0_ms: i64,
    pub t1_ms: i64,
    pub first_word: ::std::os::raw::c_int,
    pub n_words: ::std::os::raw::c_int,
    pub first_token: ::std::os::raw::c_int,
    pub n_tokens: ::std::os::raw::c_int,
    pub text: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_segment"][::std::mem::size_of::<transcribe_segment>() - 48usize];
    ["Alignment of transcribe_segment"][::std::mem::align_of::<transcribe_segment>() - 8usize];
    ["Offset of field: transcribe_segment::struct_size"]
        [::std::mem::offset_of!(transcribe_segment, struct_size) - 0usize];
    ["Offset of field: transcribe_segment::t0_ms"]
        [::std::mem::offset_of!(transcribe_segment, t0_ms) - 8usize];
    ["Offset of field: transcribe_segment::t1_ms"]
        [::std::mem::offset_of!(transcribe_segment, t1_ms) - 16usize];
    ["Offset of field: transcribe_segment::first_word"]
        [::std::mem::offset_of!(transcribe_segment, first_word) - 24usize];
    ["Offset of field: transcribe_segment::n_words"]
        [::std::mem::offset_of!(transcribe_segment, n_words) - 28usize];
    ["Offset of field: transcribe_segment::first_token"]
        [::std::mem::offset_of!(transcribe_segment, first_token) - 32usize];
    ["Offset of field: transcribe_segment::n_tokens"]
        [::std::mem::offset_of!(transcribe_segment, n_tokens) - 36usize];
    ["Offset of field: transcribe_segment::text"]
        [::std::mem::offset_of!(transcribe_segment, text) - 40usize];
};
unsafe extern "C" {
    pub fn transcribe_segment_init(out: *mut transcribe_segment);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_word {
    pub struct_size: u64,
    pub t0_ms: i64,
    pub t1_ms: i64,
    pub seg_index: ::std::os::raw::c_int,
    pub first_token: ::std::os::raw::c_int,
    pub n_tokens: ::std::os::raw::c_int,
    pub text: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_word"][::std::mem::size_of::<transcribe_word>() - 48usize];
    ["Alignment of transcribe_word"][::std::mem::align_of::<transcribe_word>() - 8usize];
    ["Offset of field: transcribe_word::struct_size"]
        [::std::mem::offset_of!(transcribe_word, struct_size) - 0usize];
    ["Offset of field: transcribe_word::t0_ms"]
        [::std::mem::offset_of!(transcribe_word, t0_ms) - 8usize];
    ["Offset of field: transcribe_word::t1_ms"]
        [::std::mem::offset_of!(transcribe_word, t1_ms) - 16usize];
    ["Offset of field: transcribe_word::seg_index"]
        [::std::mem::offset_of!(transcribe_word, seg_index) - 24usize];
    ["Offset of field: transcribe_word::first_token"]
        [::std::mem::offset_of!(transcribe_word, first_token) - 28usize];
    ["Offset of field: transcribe_word::n_tokens"]
        [::std::mem::offset_of!(transcribe_word, n_tokens) - 32usize];
    ["Offset of field: transcribe_word::text"]
        [::std::mem::offset_of!(transcribe_word, text) - 40usize];
};
unsafe extern "C" {
    pub fn transcribe_word_init(out: *mut transcribe_word);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_token {
    pub struct_size: u64,
    pub id: ::std::os::raw::c_int,
    pub p: f32,
    pub t0_ms: i64,
    pub t1_ms: i64,
    pub seg_index: ::std::os::raw::c_int,
    pub word_index: ::std::os::raw::c_int,
    pub text: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_token"][::std::mem::size_of::<transcribe_token>() - 48usize];
    ["Alignment of transcribe_token"][::std::mem::align_of::<transcribe_token>() - 8usize];
    ["Offset of field: transcribe_token::struct_size"]
        [::std::mem::offset_of!(transcribe_token, struct_size) - 0usize];
    ["Offset of field: transcribe_token::id"]
        [::std::mem::offset_of!(transcribe_token, id) - 8usize];
    ["Offset of field: transcribe_token::p"][::std::mem::offset_of!(transcribe_token, p) - 12usize];
    ["Offset of field: transcribe_token::t0_ms"]
        [::std::mem::offset_of!(transcribe_token, t0_ms) - 16usize];
    ["Offset of field: transcribe_token::t1_ms"]
        [::std::mem::offset_of!(transcribe_token, t1_ms) - 24usize];
    ["Offset of field: transcribe_token::seg_index"]
        [::std::mem::offset_of!(transcribe_token, seg_index) - 32usize];
    ["Offset of field: transcribe_token::word_index"]
        [::std::mem::offset_of!(transcribe_token, word_index) - 36usize];
    ["Offset of field: transcribe_token::text"]
        [::std::mem::offset_of!(transcribe_token, text) - 40usize];
};
unsafe extern "C" {
    pub fn transcribe_token_init(out: *mut transcribe_token);
}
unsafe extern "C" {
    pub fn transcribe_get_segment(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
        out: *mut transcribe_segment,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_get_word(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
        out: *mut transcribe_word,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_get_token(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
        out: *mut transcribe_token,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_batch_n_results(session: *const transcribe_session) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_batch_status(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_batch_full_text(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn transcribe_batch_returned_timestamp_kind(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
    ) -> transcribe_timestamp_kind;
}
unsafe extern "C" {
    pub fn transcribe_batch_detected_language(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn transcribe_batch_n_segments(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_batch_n_words(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_batch_n_tokens(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_batch_get_segment(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
        j: ::std::os::raw::c_int,
        out: *mut transcribe_segment,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_batch_get_word(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
        j: ::std::os::raw::c_int,
        out: *mut transcribe_word,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_batch_get_token(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
        j: ::std::os::raw::c_int,
        out: *mut transcribe_token,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_batch_get_timings(
        session: *const transcribe_session,
        i: ::std::os::raw::c_int,
        out: *mut transcribe_timings,
    ) -> transcribe_status;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_moonshine_streaming_stream_ext {
    pub ext: transcribe_ext,
    pub min_decode_interval_ms: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_moonshine_streaming_stream_ext"]
        [::std::mem::size_of::<transcribe_moonshine_streaming_stream_ext>() - 24usize];
    ["Alignment of transcribe_moonshine_streaming_stream_ext"]
        [::std::mem::align_of::<transcribe_moonshine_streaming_stream_ext>() - 8usize];
    ["Offset of field: transcribe_moonshine_streaming_stream_ext::ext"]
        [::std::mem::offset_of!(transcribe_moonshine_streaming_stream_ext, ext) - 0usize];
    ["Offset of field: transcribe_moonshine_streaming_stream_ext::min_decode_interval_ms"][::std::mem::offset_of!(
        transcribe_moonshine_streaming_stream_ext,
        min_decode_interval_ms
    )
        - 16usize];
};
unsafe extern "C" {
    pub fn transcribe_moonshine_streaming_stream_ext_init(
        ext: *mut transcribe_moonshine_streaming_stream_ext,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_parakeet_stream_ext {
    pub ext: transcribe_ext,
    pub att_context_right: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_parakeet_stream_ext"]
        [::std::mem::size_of::<transcribe_parakeet_stream_ext>() - 24usize];
    ["Alignment of transcribe_parakeet_stream_ext"]
        [::std::mem::align_of::<transcribe_parakeet_stream_ext>() - 8usize];
    ["Offset of field: transcribe_parakeet_stream_ext::ext"]
        [::std::mem::offset_of!(transcribe_parakeet_stream_ext, ext) - 0usize];
    ["Offset of field: transcribe_parakeet_stream_ext::att_context_right"]
        [::std::mem::offset_of!(transcribe_parakeet_stream_ext, att_context_right) - 16usize];
};
unsafe extern "C" {
    pub fn transcribe_parakeet_stream_ext_init(ext: *mut transcribe_parakeet_stream_ext);
}
